--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-joyride": "^2.3.0",
     "react-maskedinput": "^4.0.1",
     "react-mde": "^11.5.0",
+    "react-naver-maps": "0.0.13",
     "react-redux": "7.2.8",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
